feat: enhancement all routes and wrapping into index routes
